<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedEmpId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_avatar_picker"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:layout_margin="20dp"
            app:errorIconDrawable="@null"
            app:boxStrokeColor="@color/color_primary_dark"
            app:boxBackgroundColor="@color/edit_text_bg_color"
            app:hintTextColor="@android:color/black">

            <com.sample.app.android.ui.custom.view.CustomTextInputEditText
                android:id="@+id/editEmpId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="21dp"
                android:hint="@string/hint_emp_id"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:backgroundTint="@color/edit_text_bg_color"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/update_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_avatar_picker"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_margin="20dp"
        app:errorIconDrawable="@null"
        app:boxStrokeColor="@color/color_primary_dark"
        app:boxBackgroundColor="@color/edit_text_bg_color"
        app:hintTextColor="@android:color/black">

        <com.sample.app.android.ui.custom.view.CustomTextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingStart="21dp"
            android:hint="@string/hint_emp_name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:backgroundTint="@color/edit_text_bg_color"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/update_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_avatar_picker"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_margin="20dp"
        app:errorIconDrawable="@null"
        app:boxStrokeColor="@color/color_primary_dark"
        app:boxBackgroundColor="@color/edit_text_bg_color"
        app:hintTextColor="@android:color/black">

        <com.sample.app.android.ui.custom.view.CustomTextInputEditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingStart="21dp"
            android:hint="@string/hint_emp_age"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:backgroundTint="@color/edit_text_bg_color"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:layout_margin="@dimen/big_padding"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>