<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.sample.app.android.ui.login.view.model.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sample.app.android.ui.login.view.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/loginText"
            android:layout_width="368dp"
            android:layout_height="81dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:textSize="62sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/black"
        android:text="@string/action_sign_in"
        android:enabled="@{viewModel.isUserNameValid() &amp;&amp; viewModel.isPasswordValid()}"
        app:loginEnable="@{viewModel.loginFormState.dataValid}"
        android:onClick="@{(it) -> viewModel.validateLogin(it) }"
        app:accessibilityReadText="@{@string/action_sign_in_read_out}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedPassword"
         />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedUsername"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorIconDrawable="@null"
        app:boxStrokeColor="@color/color_primary_dark"
        app:boxBackgroundColor="@color/edit_text_bg_color"
        app:hintTextColor="@android:color/black">

        <com.sample.app.android.ui.custom.view.CustomTextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingStart="21dp"
            android:hint="@string/prompt_password"
            android:text="@={viewModel.password}"
            android:inputType="textPassword"
            app:passError="@{viewModel.loginFormState.passwordError}"
            android:selectAllOnFocus="true"
            android:backgroundTint="@color/edit_text_bg_color"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorIconDrawable="@null"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias="0.5"
        app:boxStrokeColor="@color/color_primary_dark"
        app:boxBackgroundColor="@color/edit_text_bg_color"
        app:hintTextColor="@android:color/black">

        <com.sample.app.android.ui.custom.view.CustomTextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingStart="21dp"
            android:hint="@string/prompt_email"
            android:textColor="@android:color/black"
            android:text="@={viewModel.userName}"
            app:userNameError="@{viewModel.loginFormState.usernameError}"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:backgroundTint="@color/edit_text_bg_color"
            android:textCursorDrawable="@null"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="@{viewModel.loadingVisibility ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlinedPassword"
        app:layout_constraintStart_toStartOf="@+id/outlinedPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>