<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="profileViewModel"
            type="com.sample.app.android.ui.home.view.model.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.sample.app.android.ui.home.view.fragments.profile.MyProfile"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:text="@={profileViewModel.displayName}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/avatar_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="16dp"
            android:text="@string/select_a_profile_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user"
            app:layout_constraintVertical_chainStyle="packed" />

        <include
            android:id="@+id/include_avatar_picker"
            layout="@layout/layout_picker"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:visibility="gone"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@+id/outlinedName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_text_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_avatar_picker"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:layout_margin="20dp"
            app:errorIconDrawable="@null"
            app:boxStrokeColor="@color/color_primary_dark"
            app:boxBackgroundColor="@color/edit_text_bg_color"
            app:hintTextColor="@android:color/black">

            <com.sample.app.android.ui.custom.view.CustomTextInputEditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="21dp"
                android:hint="@string/update_name"
                app:textError="@{profileViewModel.errorText}"
                android:text="@={profileViewModel.nameEditValue}"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:backgroundTint="@color/edit_text_bg_color"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="146dp"
            android:layout_height="48dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/update"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="@{(v) -> profileViewModel.updateUser(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
